--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-runtime": "^5.8.38",
     "css-loader": "^0.28.1",
+    "html-webpack-plugin": "^2.28.0",
     "vue-hot-reload-api": "^2.1.0",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^12.0.3",
