--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.2",
     "webpack": "^2.5.0",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-server": "^2.4.5",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
     "vue": "^2.3.2"
