--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node ./build/webpack.dev.server.js",
+    "dev": "node ./build/webpack.dev.server.js",
     "build": "node  ./build/webpack.config.js"
   },
   "repository": {
