--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
-    "vue": "^2.3.2"
+    "vue": "^2.3.2",
+    "vue-router": "^2.5.3"
   }
 }
