--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "babel-runtime": "^5.8.38",
     "css-loader": "^0.28.1",
     "html-webpack-plugin": "^2.28.0",
+    "img-loader": "^3.0.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.2",
+    "underscore": "^1.9.1",
+    "url-loader": "^1.1.1",
     "vue-hot-reload-api": "^2.1.0",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^12.0.3",
